units/ingress/traefik/daemonset_http_only.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik
        image: traefik:v3.1
        args:
        - --providers.kubernetesingress
        - --entrypoints.web.address=:80
        # Ez a sor kötelező Traefik v3 alatt, hogy az Ingress osztályokat automatikusan figyelje:
        - --providers.kubernetesingress.ingressclass=traefik
        - --providers.kubernetescrd
        # Bekapcsoljuk a HTTP logolást a konzolra, hogy lássuk ha beesik a kérés:
        - --accesslog=true
        ports:
        - name: web
          containerPort: 80
          hostPort: 80
