units/ingress/traefik/ingress_service_on_host.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${INGRESS_NAME}-ingressroute
  namespace: ${NAMESPACE}
  annotations:
    ingress_name: "${INGRESS_NAME}"
    ingress_host: "${INGRESS_HOST}"
    service: "${SERVICE}"
    port: "${PORT}"
spec:
  entryPoints:
    - ${INGRESS_ENTRYPOINT}
  routes:
  - match: Host(`${INGRESS_HOST}`)
    kind: Rule
    services:
    - name: "${SERVICE}"
      port: ${PORT}
